--- a/app/assets/javascripts/templates/user/edit.hbs
+++ b/app/assets/javascripts/templates/user/edit.hbs
@@ -5,7 +5,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Nickname</label>
         <div class="col-sm-10">
-          {{input value=nickname classNames="form-control"}}
+          {{input name="Nickname" value=nickname classNames="form-control"}}
         </div>
       </div>
     </div> 
@@ -16,7 +16,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
-          {{input value=name classNames="form-control"}}
+          {{input name="Name" value=name classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-          {{input value=email classNames="form-control"}}
+          {{input name="Email" value=email classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Age</label>
         <div class="col-sm-10">
-          {{input value=age classNames="form-control"}}
+          {{input name="Age" value=age classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Height</label>
         <div class="col-sm-10">
-          {{input value=height classNames="form-control"}}
+          {{input name="Height" value=height classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <div class="form-group">
         <label class= "col-sm-2 control-label">Weight</label>
         <div class="col-sm-10">
-          {{input value=weight classNames="form-control"}}
+          {{input name="Weight" value=weight classNames="form-control"}}
         </div>
       </div>
     </div>
